# Codebase-Olympus

./: .codebase-standards-manifest.json  .codebase-standards-sync.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Ontwerpkeuzes Gymnasium Classica.md  PROJECTSTATUS.md  Project Briefing: Gymnasium Classica.md  README.md  pyproject.toml
.claude/hooks/: pytest_on_stop.sh  ruff_on_python.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml
data/: methode_mapping.json  vocabulaire_clusters.json
data/content/: GRC-G-MORF-ADJ-D12-3U.md  GRC-G-MORF-ADJ-D3.md  GRC-G-MORF-ADJ-INTRO.md  GRC-G-MORF-AOR-INTRO.md  GRC-G-MORF-AOR-SIGMA.md  GRC-G-MORF-AOR-THEM.md  GRC-G-MORF-AUGMENT.md  GRC-G-MORF-CONJ-INTRO.md  GRC-G-MORF-CONTR-A.md  GRC-G-MORF-CONTR-E.md  GRC-G-MORF-CONTR-INTRO.md  GRC-G-MORF-DECL-INTRO.md  GRC-G-MORF-DECL1-ALFA.md  GRC-G-MORF-DECL1-ETA.md  GRC-G-MORF-DECL1-INTRO.md  GRC-G-MORF-DECL1-PARAD.md  GRC-G-MORF-DECL2-INTRO.md  GRC-G-MORF-DECL2-PARAD.md  GRC-G-MORF-DECL3-INTRO.md  GRC-G-MORF-DECL3-PARAD.md  GRC-G-MORF-DIATH-INTRO.md  GRC-G-MORF-GENUS-INTRO.md  GRC-G-MORF-IMPF-INTRO.md  GRC-G-MORF-IMPF-PARAD.md  GRC-G-MORF-LIDW-INTRO.md  GRC-G-MORF-LIDW-VERBG.md  GRC-G-MORF-NAAMVAL-INTRO.md  GRC-G-MORF-NUMERUS-INTRO.md  GRC-G-MORF-PERSOON-INTRO.md  GRC-G-MORF-PRAES-EIMI.md  GRC-G-MORF-PRAES-PARAD.md  GRC-G-MORF-PRAES-THEM.md  GRC-G-MORF-PRON-AANW.md  GRC-G-MORF-PRON-AUTOS.md  GRC-G-MORF-PRON-INTRO.md  GRC-G-MORF-PRON-PERS.md  GRC-G-MORF-TEMPUS-INTRO.md  GRC-G-MORF-THEM-INTRO.md  GRC-G-SYNT-ACC-FUNCTIE.md  GRC-G-SYNT-ADJ-ATTRIB.md  (+216 more)
data/graph/: grc_alfabet.json  grc_grammatica_leerjaar1.json  grc_integratie_leerjaar1.json  grc_vocabulaire_leerjaar1.json  lat_grammatica_leerjaar1.json  lat_grammatica_poc.json  lat_integratie_leerjaar1.json  lat_vocabulaire_leerjaar1.json  sha_cultuur_leerjaar1.json  sha_strategie_polmo.json  transfer_edges_leerjaar1.json
data/passages/: grc_leespassages_leerjaar1.json  lat_leespassages_leerjaar1.json  lat_passages_leerjaar1.json
data/vocab_sources/: grc_f01_words.json  grc_f02_words.json  lat_f01_words.json  lat_f02_words.json  lat_f03_words.json
docs/: A_Lesstof_Latijn_Grieks.md  BRIEFING_GYMNASIUM_CLASSICA.md  LITERATUURONDERZOEK_LEERBENADERING.md  ONTWERPKEUZES_GYMNASIUM_CLASSICA.md  PILOT_GUIDE.md  Prompt_spoor_a.md  Prompt_spoor_c.md  Prompt_spoor_d.md  SPRINTPLAN.md  VOCABULAIRE_STRATEGIE.md  graph-methodology.md  methode_mapping.md  ontwikkelstraat-uitleg.md
docs/decisions/: ADR-0001-leerprofiel-opslag-en-mentor-opt-in.md
docs/externe-bronnen/: wkm-problemen-latijn-grieks.md
docs/research/: tts-evaluatie-grieks.md  tts-evaluatie-latijn.md
docs/security/: dpia.md  eu-ai-act-risico.md
docs/specs/: audio-player-component.md
docs/starterpakket-nieuw-project/: 01-werkwijze-en-principes.md  02-graph-blueprint.md  03-adaptieve-laag.md  04-ontwikkelstraat-en-stories.md  05-bootstrap-en-ontwerpkeuzes.md  06-antipatronen-en-checklist.md  README.md  review_olympus-starterpakket_2026-05.md
docs/syllabus-grieks/: syllabus-gtc-2026.md
docs/syllabus-latijn/: syllabus-ltc-2026.md
follow-ups/: FOLLOW_UP.template.md  README.md
follow-ups/open/: OL__security-audit-ci-sast.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js
review-acties/: README.md  REVIEW_ACTIE.template.md
scripts/: README.md  check_diataxis.py  check_epic_collisions.py  check_standard_drift.py  check_story_status.py  content_coverage.py  export_graph_stats.py  generate_audio.py  generate_b504a_decl_offline.py  generate_b504b_conj_offline.py  generate_b505_vertaal_offline.py  generate_b506_grc_alfa_offline.py  generate_grc_passages.py  generate_grc_vocab_f01.py  generate_grc_vocab_f02.py  generate_items_c1_01.py  generate_items_c1_02.py  generate_items_c1_03.py  generate_items_c1_04.py  generate_items_c1_05.py  generate_items_c1_06.py  generate_items_c1_07.py  generate_items_c1_08.py  generate_items_c1_09.py  generate_items_c1_10.py  generate_items_e3_01.py  generate_items_e3_02.py  generate_items_e3_03.py  generate_items_e3_04.py  generate_items_e3_05.py  generate_items_e3_06.py  generate_items_e3_07.py  generate_items_e3_08.py  generate_items_e3_09.py  generate_items_e3_10.py  generate_items_e3_11.py  generate_items_e3_12.py  generate_items_e3_19.py  generate_items_f1_08a_myt.py  generate_items_f1_08b_rom.py  (+28 more)
src/gymnasium_classica/: __init__.py
stories/: EPICS.md
stories/backlog/: B4-01.md  B4-02.md  B4-03.md  B6-01.md  B6-02.md  B6-03.md  B6-04.md  B6-05.md  B7-01.md  B7-02.md  B7-03.md  B8-01.md  B8-02.md  B8-03.md  E3-18.md  F1-20.md  F2-04.md  L1-01.md  L1-03.md  L2-01.md  L2-02.md  L2-03.md  L3-01.md  L3-03.md  M1-02.md  M1-03.md  N1-02.md  N1-06.md  OL_E10_S1.md  OL_E10_S2.md  OL_E10_S3.md  OL_E12_S1.md  OL_E12_S2.md  OL_E12_S3.md  OL_E12_S4.md  OL_E12_S5.md  OL_E13_S1.md  OL_E13_S2.md  OL_E13_S3.md  OL_E14_S1.md  (+14 more)
stories/doing/: E1-01.md  F1-13.md  L1-02.md  L3-02.md  M1-01.md  M1-04.md  N1-01.md  N1-03.md  N1-04.md  OL_E26_S1.md  OS-04.md  OS-07.md  OS-08.md  OS-09.md
tests/: conftest.py  test_answer_capture.py  test_api_app.py  test_api_auth.py  test_api_bijspijker.py  test_api_database.py  test_api_intake.py  test_api_mentor.py  test_api_mentor_attempts.py  test_api_mentor_struikelpunten.py  test_api_progress.py  test_api_session.py  test_api_user.py  test_bijspijker_planner.py  test_bkt.py  test_check_story_status.py  test_content_coverage.py  test_context_first.py  test_diagnostic.py  test_equity.py  test_experiments.py  test_generate_audio.py  test_generate_worksheets.py  test_grading.py  test_grading_classification.py  test_grammar_first_scaffolding.py  test_graph_loader.py  test_graph_validation.py  test_id_schema.py  test_integratielaag.py  test_integration_full_journey.py  test_integration_real_graph.py  test_l2_learning_rate.py  test_l2_mastery.py  test_learner_strategy.py  test_lego_detector.py  test_methode_mapping_validator.py  test_metrics_effect_size.py  test_metrics_retention.py  test_misconceptie_model.py  (+20 more)
(+586 files in other folders)
