[project]
name = "gymnasium-classica"
version = "0.1.0"
description = "Adaptief leersysteem voor Latijn en Grieks op VWO-gymnasiumniveau"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.6,<3",
    "networkx>=3.2,<4",
    "reportlab>=4.0,<5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gymnasium_classica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99
