[project]
name = "gymnasium-classica"
version = "0.1.0"
description = "Adaptief leersysteem voor Latijn en Grieks op VWO-gymnasiumniveau"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic[email]>=2.6,<3",
    "networkx>=3.2,<4",
    "reportlab>=4.0,<5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gymnasium_classica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
# Expliciete regelkeuze zodat ruff-defaults niet stilletjes veranderen tussen versies.
# E/F = pycodestyle errors + pyflakes (correctheid)
# I   = isort (import-volgorde)
# UP  = pyupgrade (moderne Python-syntax op 3.11)
# B   = flake8-bugbear (veelvoorkomende bugs)
# SIM = flake8-simplify (leesbaarheid)
# RUF = ruff-specifieke regels (onder andere RUF001-003 voor look-alike unicode)
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line-too-long: format regelt dit; losse strings/tabellen mogen uitsteken
    "B008",    # function call in argument defaults: FastAPI Depends()/Query() vereist dit
    "RUF001",  # ambiguous-unicode in strings: Griekse tekens zijn hier juist gewenst
    "RUF002",  # idem voor docstrings
    "RUF003",  # idem voor comments
]

[tool.ruff.lint.per-file-ignores]
# Tests mogen asserts gebruiken en hebben vaker lange fixtures/strings.
# E402 toegestaan: sys.path-manipulatie vóór project-imports is gangbaar.
"tests/**" = ["B011", "E402"]
# Scripts zijn vaak ad-hoc; iets soepelere regels. E402 idem voor sys.path-prelude.
"scripts/**" = ["B008", "E402"]

[tool.ruff.format]
# Expliciet zodat defaults niet verschuiven bij een ruff-upgrade.
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = false
