[project]
name = "gymnasium-classica"
version = "0.1.0"
description = "Adaptief leersysteem voor Latijn en Grieks op VWO-gymnasiumniveau"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic[email]>=2.13.4,<3",
    "networkx>=3.6.1,<4",
    "reportlab>=4.5.1,<5",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gymnasium_classica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99
# Gevendorde codebase-standards-scripts blijven byte-identiek aan upstream
# (manifest-drift-check); lokaal lint/format eraf zou drift introduceren.
extend-exclude = [
    "scripts/check_story_status.py",
    "scripts/sync_story_folders.py",
    "scripts/regenerate_status.py",
    "scripts/check_standard_drift.py",
    "scripts/check_epic_collisions.py",
]

[tool.ruff.lint]
# Expliciete regelkeuze zodat ruff-defaults niet stilletjes veranderen tussen versies.
# E/F = pycodestyle errors + pyflakes (correctheid)
# I   = isort (import-volgorde)
# UP  = pyupgrade (moderne Python-syntax op 3.11)
# B   = flake8-bugbear (veelvoorkomende bugs)
# SIM = flake8-simplify (leesbaarheid)
# RUF = ruff-specifieke regels (onder andere RUF001-003 voor look-alike unicode)
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line-too-long: format regelt dit; losse strings/tabellen mogen uitsteken
    "B008",    # function call in argument defaults: FastAPI Depends()/Query() vereist dit
    "RUF001",  # ambiguous-unicode in strings: Griekse tekens zijn hier juist gewenst
    "RUF002",  # idem voor docstrings
    "RUF003",  # idem voor comments
]

[tool.ruff.lint.per-file-ignores]
# Tests mogen asserts gebruiken en hebben vaker lange fixtures/strings.
# E402 toegestaan: sys.path-manipulatie vóór project-imports is gangbaar.
"tests/**" = ["B011", "E402"]
# Scripts zijn vaak ad-hoc; iets soepelere regels. E402 idem voor sys.path-prelude.
"scripts/**" = ["B008", "E402"]

[tool.ruff.format]
# Expliciet zodat defaults niet verschuiven bij een ruff-upgrade.
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = false

[tool.mypy]
python_version = "3.11"
# Strict: we willen in nieuwe code geen onbedekte types. Voor bestaande code
# werken we met een error-baseline (zie scripts/check_mypy_no_regression.py
# indien aanwezig) i.p.v. alles in één klap oplossen.
strict = true
plugins = ["pydantic.mypy"]
# tests/ en scripts/ zijn losser: mocks en dynamische dict-literals maken
# strict type-checking daar vaak onhaalbaar zonder te refactoren.
exclude = [
    "^tests/",
    "^scripts/",
    "^data/",
    "^docs/",
    "^stories/",
    "^\\.venv/",
]

[[tool.mypy.overrides]]
# networkx heeft geen goede type-stubs.
module = "networkx.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
